[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/interface/peers/Peers.gd" type="Script" id=1]
[ext_resource path="res://icons/send.png" type="Texture" id=2]

[node name="Peers" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 633.0
margin_bottom = 393.0

[node name="Header" type="Label" parent="List"]
margin_right = 626.0
margin_bottom = 14.0
text = "Peers"
align = 1

[node name="Items" type="ItemList" parent="List"]
margin_top = 18.0
margin_right = 626.0
margin_bottom = 360.0
size_flags_vertical = 3
select_mode = 1

[node name="Buttons" type="HBoxContainer" parent="List"]
margin_top = 364.0
margin_right = 626.0
margin_bottom = 386.0

[node name="Send" type="Button" parent="List/Buttons"]
margin_right = 61.0
margin_bottom = 22.0
size_flags_horizontal = 2
disabled = true
text = "Send"
icon = ExtResource( 2 )

[node name="SelectAll" type="Button" parent="List/Buttons"]
margin_left = 460.0
margin_right = 532.0
margin_bottom = 22.0
text = "Select All"

[node name="DeselectAll" type="Button" parent="List/Buttons"]
margin_left = 536.0
margin_right = 626.0
margin_bottom = 22.0
text = "Deselect All"
[connection signal="pressed" from="List/Buttons/Send" to="." method="_on_Send_pressed"]
[connection signal="pressed" from="List/Buttons/SelectAll" to="." method="_on_SelectAll_pressed"]
[connection signal="pressed" from="List/Buttons/DeselectAll" to="." method="_on_DeselectAll_pressed"]
